--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -28,6 +28,7 @@ source "drivers/input/Kconfig.paw32xx"
 source "drivers/input/Kconfig.pinnacle"
 source "drivers/input/Kconfig.pmw3610"
 source "drivers/input/Kconfig.sbus"
+source "drivers/input/Kconfig.seesaw_keypad"
 source "drivers/input/Kconfig.sdl"
 source "drivers/input/Kconfig.stmpe811"
 source "drivers/input/Kconfig.touch"
