--- a/boards/st/stm32f4_disco/stm32f4_disco.dts
+++ b/boards/st/stm32f4_disco/stm32f4_disco.dts
@@ -80,13 +80,6 @@
 	};
 };
 
-&usart1 {
-	pinctrl-0 = <&usart1_tx_pb6 &usart1_rx_pb7>;
-	pinctrl-names = "default";
-	current-speed = <115200>;
-	status = "okay";
-};
-
 &clk_lsi {
 	status = "okay";
 };
@@ -156,14 +149,38 @@ zephyr_udc0: &usbotg_fs {
 	status = "okay";
 };
 
-&can1 {
-	pinctrl-0 = <&can1_rx_pb8 &can1_tx_pb9>;
-	pinctrl-names = "default";
-	status = "disabled";
-};
-
 &can2 {
 	pinctrl-0 = <&can2_rx_pb5 &can2_tx_pb13>;
 	pinctrl-names = "default";
 	status = "okay";
+};
+
+&dma1 {
+	status = "okay";
+};
+
+&plli2s {
+	mul-n = <429>;
+	div-r = <4>;
+	status = "okay";
+};
+
+&i2s3 {
+	mck-enabled;
+	pinctrl-0 = <&i2s3_ws_pa4 &i2s3_ck_pc10 &i2s3_sd_pc12 &i2s3_mck_pc7>;
+	pinctrl-names = "default";
+	status = "okay";
+};
+
+&i2c1 {
+	clock-frequency = <I2C_BITRATE_FAST>;
+	pinctrl-0 = <&i2c1_scl_pb6 &i2c1_sda_pb9>;
+	pinctrl-names = "default";
+	status = "okay";
+
+	audio_codec: cs43l22@4a {
+		compatible = "cirrus,cs43l22";
+		reg = <0x4a>;
+		reset-gpios = <&gpiod 4 0>;
+	};
 };
