--- a/drivers/audio/Kconfig
+++ b/drivers/audio/Kconfig
@@ -36,6 +36,7 @@ module-str = audio codec
 source "subsys/logging/Kconfig.template.log_config"
 
 source "drivers/audio/Kconfig.cs43l22"
+source "drivers/audio/Kconfig.cs47l63"
 source "drivers/audio/Kconfig.max98091"
 source "drivers/audio/Kconfig.pcm1681"
 source "drivers/audio/Kconfig.tas6422dac"
